--- a/investobank.client/InvestoBank.Execution.Service.fsproj
+++ b/investobank.client/InvestoBank.Execution.Service.fsproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,6 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>investobank.client</RootNamespace>
     <AssemblyName>investobank.client</AssemblyName>
+    <Name>InvestoBank.Execution.Service</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
